# PhyweControl

./: README.md  __init__.py  function_generator.py  function_generator_phywe.py  pyproject.toml  test.py
.github/workflows/: publish-to-pypi.yml
PhyweControl/: __init__.py  command_values.py  function_generator.py  function_generator_phywe.py
driver/: WirelessLink-2_USB_Serial_(gadgetfs)_v2.4.cat  WirelessLink-2_USB_Serial_(gadgetfs)_v2.4.inf  ftdibus.cat  ftdibus.inf  ftdiport.cat  ftdiport.inf  smartsense.cat  smartsense.inf
driver/amd64/: ftdibus.sys  ftser2k.sys
driver/i386/: ftdibus.sys  ftser2k.sys
driver/ia64/: libusb0.sys
driver/x86/: libusb0.sys
