[build-system]
requires      = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phywecontrol"
version = "0.0.2"
description = "A Package to control a digital function generator by PHYWE"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-2.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/Schallform/PhyweControl"

[tool.setuptools.packages.find]
include = ["PhyweControl"]
